<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <name>JCRIU</name>
    <description>Java Binding for the CRIU API</description>
    <url>https://github.com/mbien/JCRIU/</url>
    
    <groupId>dev.mbien.jcriu</groupId>
    <artifactId>JCRIU</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
        
    <licenses>
        <license>
          <name>MIT License</name>
          <url>https://opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>
    
    <developers>
        <developer>
          <name>Michael Bien</name>
          <email>mbien42@gmail.com</email>
          <organization>Freelancer</organization>
          <organizationUrl>https://mbien.dev</organizationUrl>
        </developer>
    </developers>
        
    <scm>
        <connection>scm:git@github.com:mbien/JCRIU.git</connection>
        <developerConnection>scm:git@github.com:mbien/JCRIU.git</developerConnection>
        <url>https://github.com/mbien/JCRIU/</url>
    </scm>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- paths for junit tests - use when criu is not installed locally or a different version should be used -->
        <criu.path><!--/home/mbien/projects/criu/criu--></criu.path>
        <criu.lib.path><!---Djava.library.path=/home/mbien/projects/criu/lib/c--></criu.lib.path>
    </properties>
    
    <dependencies>
        
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.2</version>
            <scope>test</scope>
        </dependency>
        
    </dependencies>
    
    <build>
        <plugins>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <trimStackTrace>false</trimStackTrace>
                    <argLine>--enable-preview --add-modules jdk.incubator.foreign --enable-native-access=ALL-UNNAMED ${criu.lib.path}</argLine>
                    <environmentVariables>
                       <PATH>${criu.path}</PATH>
                    </environmentVariables>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.foreign</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources/panama</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <id>panama</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jextract</executable>
                            <arguments>
                                <argument>-tdev.mbien.jcriu</argument>
                                <argument>-lcriu</argument>
                                <argument>-dtarget/generated-sources/panama</argument>
                                <argument>--source</argument>
                                <argument>src/main/c/criu.h</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
        </plugins>
        
    </build>
    
</project>